add an image for the  wordpress page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <li>
                 <div class="img_area">
                   <a href="http://34.228.64.106/"
-                    ><img src="images/img_portfolio2.png" alt=""
+                    ><img src="images/img_portfolio5.png" alt=""
                   /></a>
                 </div>
                 <div class="portfolio_cont">
@@ -133,31 +133,7 @@
                     <tbody>
                       <tr>
                         <td headers="col1">
-                          <span class="category html">HTML</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >index.html</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category css">CSS</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >common.css</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category js">JS</span>
+                          <span class="category js">wordpress</span>
                         </td>
                         <td headers="col2">
                           <a
@@ -311,10 +287,12 @@
                   </table>
                 </div>
               </li>
-
+              <!-- todo list -->
               <li>
                 <div class="img_area">
-                  <img src="images/img_portfolio10.png" alt="" />
+                  <a href="./todo-list/todo.html"
+                    ><img src="images/img_portfolio10.png" alt=""
+                  /></a>
                 </div>
                 <div class="portfolio_cont">
                   <h3>
