--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -71,15 +71,15 @@
       <div class="game-result">Result</div>
     </div>
     <div id="square-container">
-      <div class="squares square" value="0"></div>
-      <div class="squares square" value="1"></div>
-      <div class="squares square" value="2"></div>
-      <div class="squares square" value="3"></div>
-      <div class="squares square" value="4"></div>
-      <div class="squares square" value="5"></div>
-      <div class="squares square" value="6"></div>
-      <div class="squares square" value="7"></div>
-      <div class="squares square" value="8"></div>
+      <div class="squares square" value="0">1</div>
+      <div class="squares square" value="1">2</div>
+      <div class="squares square" value="2">3</div>
+      <div class="squares square" value="3">4</div>
+      <div class="squares square" value="4">5</div>
+      <div class="squares square" value="5">6</div>
+      <div class="squares square" value="6">7</div>
+      <div class="squares square" value="7">8</div>
+      <div class="squares square" value="8">9</div>
     </div>
 
     <div class="restart-container">
