--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -7,6 +7,7 @@
     <style type="text/css">
       * {
         box-sizing: border-box;
+        border: 1px solid red;
       }
       #square-container {
         display: grid;
@@ -62,7 +63,7 @@
           margin: 50px auto;
         }
         .game-result {
-          padding: 10px;
+          padding: 5px;
         }
       }
     </style>
