--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                       >GoTo</a
                     >
                   </div>
-                  <table class="file_link">
+                  <!-- <table class="file_link">
                     <thead>
                       <tr>
                         <th id="col1">Category</th>
@@ -394,9 +394,55 @@
                         </td>
                         <td headers="col2">
                           <a
-                            href="https://github.com/janehyun03"
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
                             target="_blank"
                             >Github Page</a
+                          >
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table> -->
+                  <table class="file_link">
+                    <thead>
+                      <tr>
+                        <th id="col1">Category</th>
+                        <th id="col2">Source (click!)</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category html">HTML</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            target="_blank"
+                            >tic-tac-toe.html</a
+                          >
+                        </td>
+                      </tr>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category css">CSS</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            target="_blank"
+                            >tic-tac-toe.css</a
+                          >
+                        </td>
+                      </tr>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category js">JS</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            target="_blank"
+                            >tic-tac-toe.js</a
                           >
                         </td>
                       </tr>
