--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -23,6 +23,7 @@
         border: 1px black solid;
         background-color: transparent;
         text-align: center;
+        margin: 1px;
       }
       .restart-container {
         display: flex;
