make vedio responsive

--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -46,13 +46,13 @@
         #square-container {
           display: grid;
           grid-template-columns: repeat(3, auto);
-          width: 150px;
-          margin: 50px auto;
+          width: 156px;
+          /* margin: 50px auto; */
         }
         .square {
           width: 50px;
           height: 50px;
-          line-height: 50px;
+          /* line-height: 50px; */
           font-size: 30px;
         }
 
