--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -7,7 +7,6 @@
     <style type="text/css">
       * {
         box-sizing: border-box;
-        border: 1px solid red;
       }
       #square-container {
         display: grid;
@@ -43,6 +42,9 @@
 
       /* 814 이하 */
       @media screen and (max-width: 814px) {
+        * {
+          border: 1px solid red;
+        }
         #square-container {
           display: grid;
           grid-template-columns: repeat(3, auto);
@@ -52,8 +54,9 @@
         .square {
           width: 50px;
           height: 50px;
+
           /* line-height: 50px; */
-          font-size: 30px;
+          /* font-size: 30px; */
         }
 
         .result-container {
