--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -54,9 +54,8 @@
         .square {
           width: 50px;
           height: 50px;
-
-          /* line-height: 50px; */
-          /* font-size: 30px; */
+          line-height: 50px;
+          font-size: 30px;
         }
 
         .result-container {
