tic-tac-toe edited

--- a/small-games/tic-tac-toe.html
+++ b/small-games/tic-tac-toe.html
@@ -43,13 +43,12 @@
       /* 814 이하 */
       @media screen and (max-width: 814px) {
         * {
-          border: 1px solid red;
+          /* border: 1px solid red; */
         }
         #square-container {
           display: grid;
           grid-template-columns: repeat(3, auto);
           width: 156px;
-          /* margin: 50px auto; */
         }
         .square {
           width: 50px;
