--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                   </ul>
                   <div class="btn_area">
                     <a
-                      href="https://janehyun03.github.io/small-games/tic-tac-toe.html"
+                      href="https://janehyun03.github.io/tic-tac-toe/tic-tac-toe.html"
                       target="_blank"
                       class="btn_goto"
                       >GoTo</a
@@ -416,7 +416,7 @@
                         </td>
                         <td headers="col2">
                           <a
-                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/tic-tac-toe/tic-tac-toe.html"
                             target="_blank"
                             >tic-tac-toe.html</a
                           >
@@ -428,7 +428,7 @@
                         </td>
                         <td headers="col2">
                           <a
-                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/tic-tac-toe/style.css"
                             target="_blank"
                             >tic-tac-toe.css</a
                           >
@@ -440,7 +440,7 @@
                         </td>
                         <td headers="col2">
                           <a
-                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/small-games/tic-tac-toe.html"
+                            href="https://github.com/janehyun03/janehyun03.github.io/blob/main/tic-tac-toe/script.js"
                             target="_blank"
                             >tic-tac-toe.js</a
                           >
