--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                           <a
                             href="https://github.com/janehyun03/janehyun03.github.io/blob/main/tic-tac-toe/style.css"
                             target="_blank"
-                            >tic-tac-toe.css</a
+                            >style.css</a
                           >
                         </td>
                       </tr>
@@ -442,7 +442,7 @@
                           <a
                             href="https://github.com/janehyun03/janehyun03.github.io/blob/main/tic-tac-toe/script.js"
                             target="_blank"
-                            >tic-tac-toe.js</a
+                            >script.js</a
                           >
                         </td>
                       </tr>
