edited video file

--- a/video/main.html
+++ b/video/main.html
@@ -50,6 +50,7 @@
         ></path>
       </svg>
     </div>
+
     
     <div><span class="resume">Resume</span></div>
   </button>
@@ -89,7 +90,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
           <div class="modal-item">
@@ -99,7 +100,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
           <div class="modal-item">
@@ -109,7 +110,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
           <div class="modal-item">
@@ -119,7 +120,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
           <div class="modal-item">
@@ -129,7 +130,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
           <div class="modal-item">
@@ -139,7 +140,7 @@
             <div class="pic-description">
               <h3 class="match">81% Match</h3>
               <div class="pg">PG-13</div><span>2019</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi, dolorem ipsum cupiditate.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolores ducimus dignissimos aperiam cum sapiente sequi.</p>
             </div>
           </div>
 
