edited video footer

--- a/video/main.html
+++ b/video/main.html
@@ -226,7 +226,7 @@
         <li><img class="profile-img"
           src="./images/profile-img1.png"
           alt=""
-        /><span class="profile-text-name">Jane</span></li>
+        /><a href="index.html" target="_parent"><span class="profile-text-name">Jane</span></a></li>
         <li><img class="profile-img"
           src="./images/profile-img2.png"
           alt=""
@@ -384,7 +384,7 @@
               </ul>
             </div>
           </div>
-          <div >
+          <div class="service-code-container">
             <button class="service-code">Service Code</button>
           </div>
           <div class="copyright"> 1997-2023 Nexflix, Inc.</div>
