edited video button

--- a/video/main.html
+++ b/video/main.html
@@ -323,19 +323,19 @@
       <section class="slider">
         <div class="movieList">
           <div class="category-text">Trending Now</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">High School TV Shows</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">Action&Adventure Movies</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">TV Shows set in New York City</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">TV Shows set in New York City</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">TV Shows set in New York City</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
           <div class="category-text">TV Shows set in New York City</div>
-          <div class="main_items"></div>
+          <div class="main-items"></div>
         </div>
 
 
