edited video profile icons

--- a/video/main.html
+++ b/video/main.html
@@ -230,16 +230,13 @@
         <li><img class="profile-img"
           src="./images/profile-img2.png"
           alt=""
-        /><span class="profile-text-name">Jane</span></li>
-        <li><img class="profile-img"
+        /><a href="index.html" target="_parent"><span class="profile-text-name">Jane</span></a></li><li><img class="profile-img"
           src="./images/profile-img3.png"
           alt=""
-        /><span class="profile-text-name">Jane</span></li>
-        <li><img class="profile-img"
+        /><a href="index.html" target="_parent"><span class="profile-text-name">Jane</span></a></li><li><img class="profile-img"
           src="./images/profile-img4.png"
           alt=""
-        /><span class="profile-text-name">Jane</span></li>
-        
+        /><a href="index.html" target="_parent"><span class="profile-text-name">Jane</span></a></li>
         <li class="profile-text">Manage Profiles</li>
         <li class="profile-text">Transfer Profile</li>
         <li class="profile-text">Account</li>
