edited btn color

--- a/video/main.html
+++ b/video/main.html
@@ -332,7 +332,7 @@
               </div>
               
               
-            <div class="btn-con" style="background-color: aquamarine; ">
+            <div class="btn-con">
                 <button class="playButton">
                   <div class="playButton-con">
                     <svg
