--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     </section>
-    
+
     <!-- About me slider section-->
     <section class="section-about">
       <div class="container">
@@ -122,8 +122,9 @@
             </p>
         </div>
         <div class="step-img-box">
+          <a href="./Omnifood-Desktop/index.html">
           <img src="/images/img_portfolio1.png" class="step-img"
-          alt="iPhone app preference selection screen" />
+          alt="iPhone app preference selection screen" /></a>
         </div>
 
        
