--- a/index2.html
+++ b/index2.html
@@ -3,17 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/favicon.ico" />
+  <meta name="keyword" content="Jane Yi, portfolio, javascript, developer" />
+  <meta name="description" content="aspiring web developer." />
+  <meta property="og:title" content="Jane Yi | Web Developer" />
+  <meta property="og:description" content="aspiring web developer." />
+  <meta property="og:url" content="https://janehyun03.github.io/" />
+  <meta property="og:type" content="website" />
+
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
   <!-- css -->
   <link rel="stylesheet" href="./style2.css" />
   <link rel="stylesheet" href="./general.css" />
+
   <!-- slider -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
-  
+
+  <!-- typed animation -->
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
   <title>Jane Portfolio</title>
 </head>
 <body>
@@ -35,10 +47,7 @@
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
-          <h1 class="heading-primary">
-            Hello, 
-            I am a passionate web developer Jane
-          </h1>
+          <h1 class="h1 heading-primary">Hi, I'm <span class="animate"></span></h1>
           <p class="hero-description">I'm a passionate web developer currently interning at Tesor Halo. With a keen interest in creating innovative and efficient web solutions, I strive to leverage my skills to build impactful and user-friendly applications.</p>
           
           <!-- linked In  -->
@@ -250,58 +259,6 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-  <script type="text/javascript">
-$(document).ready(function () {
-  $(".skills").slick({
-    infinite: true,
-    autoplay: true,
-    autoplaySpeed: 1000,
-    speed: 1000,
-    slidesToShow:10,
-    slidesToScroll: 1,
-    arrows:false,
-    responsive: [
-      {
-        breakpoint: 1024,
-        settings: {
-          slidesToShow: 3,
-          slidesToScroll: 3,
-          infinite: true,
-        },
-      },
-      {
-        breakpoint: 600,
-        settings: {
-          slidesToShow: 2,
-          slidesToScroll: 2,
-        },
-      },
-      {
-        breakpoint: 480,
-        settings: {
-          slidesToShow: 1,
-          slidesToScroll: 1,
-        },
-      },
-    ],
-  });
-},
-
-);
-
-$(document).ready(function () {
-  $(".about").slick({
-    infinite: true,
-    // autoplay: true,
-    // autoplaySpeed: 2000,
-    speed: 1000,
-    slidesToShow:1,
-    slidesToScroll: 1,
-    arrows:false,
-    dots: true
-  })}
-)
-  </script>
+  <script src="./script2.js"></script>
 </body>
 </html>
