--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
   <!-- css -->
-  <link rel="stylesheet" href="./style2.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./general.css" />
 
   <!-- slider -->
@@ -260,6 +260,6 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="./script2.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
