--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
   <meta name="description" content="aspiring web developer." />
   <meta property="og:title" content="Jane Yi | Web Developer" />
   <meta property="og:description" content="aspiring web developer." />
-  <meta property="og:url" content="https://janehyun03.github.io/" />
+  <meta property="og:url" content="http://janehyun03.github.io/" />
   <meta property="og:type" content="website" />
 
   <!-- fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="http://fonts.googleapis.com">
+  <link rel="preconnect" href="http://fonts.gstatic.com" crossorigin>
+  <link href="http://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
   <!-- css -->
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./general.css" />
 
   <!-- slider -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
-
-  <!-- typed animation -->
-  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
 
   <title>Jane Portfolio</title>
 </head>
@@ -255,11 +252,31 @@
 
 
   </main>
+  <footer>
+    <h2>Contacts</h2>
+    <ul class="contact_list">
+      <li>
+        <a href="mailto:janehyun03@gmail.com"
+          ><i class="far fa-envelope"></i>janehyun03@gmail.com</a
+        >
+      </li>
+      <li><i class="fas fa-phone"></i>6479900841</li>
+      <li>
+        <a href="https://github.com/janehyun03"
+          ><i class="fab fa-github"></i>GitHub account</a
+        >
+      </li>
+    </ul>
+  </footer>
 
 
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <!-- typed animation -->
+  <script src="//unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <!-- slider -->
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <!-- js -->
   <script src="./script.js"></script>
 </body>
 </html>
