--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 
 
   <!-- typed animation -->
-  <script src="//unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <script src="http://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <!-- slider -->
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- js -->
   <script src="./script.js"></script>
 </body>
