--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./images/favicon.ico" />
-  <meta name="keyword" content="Jane Yi, portfolio, javascript, developer" />
-  <meta name="description" content="aspiring web developer." />
-  <meta property="og:title" content="Jane Yi | Web Developer" />
-  <meta property="og:description" content="aspiring web developer." />
-  <meta property="og:url" content="http://janehyun03.github.io/" />
-  <meta property="og:type" content="website" />
+
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +15,7 @@
   <link rel="stylesheet" href="./general.css" />
 
   <!-- slider -->
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
 
   <title>Jane Portfolio</title>
 </head>
@@ -273,9 +267,9 @@
   <!-- typed animation -->
   <script src="http://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <!-- slider -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- js -->
   <script src="./script.js"></script>
 </body>
