about me slide dots added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./general.css" />
 
   <!-- slider -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
 
   <title>Jane Portfolio</title>
 </head>
@@ -263,7 +263,7 @@
     </ul>
   </footer>
 
-
+ 
   <!-- typed animation -->
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <!-- slider -->
@@ -272,5 +272,6 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- js -->
   <script src="./script.js"></script>
+
 </body>
 </html>
