responsive mobile added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- slider -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
-
+  
   <title>Jane Portfolio</title>
 </head>
 <body>
@@ -34,6 +34,10 @@
         <li><a class="main-nav-link" href="#footer">Contact</a></li>
       </ul>
     </nav>
+    <button class="btn-mobile-nav">
+      <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+      <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+    </button>
   </header>
 
   <main>
@@ -210,7 +214,7 @@
             </p>
         </div>
          <div class="step-img-box">
-          <a href="./Omnifood/index.html">
+          <a href="./Omnifood/index.html" target="_blank">
             <img src="/images/omnifood.png" class="step-img"
           alt="iPhone app delivery screen" />
           </a>
@@ -218,7 +222,7 @@
 
        <!-- STEP 02 -->
        <div class="step-img-box">
-        <a href="./video/index.html">
+        <a href="./video/index.html" target="_blank">
         <img src="/images/netflix.png" class="step-img"
         alt="iPhone app meal approving plan screen" />
         </a>
@@ -242,7 +246,7 @@
             </p>
         </div>
         <div class="step-img-box">
-          <a href="https://sign-up-page-bice.vercel.app/">
+          <a href="https://sign-up-page-bice.vercel.app/" target="_blank">
           <img src="/images/signup.png" class="step-img"
           alt="iPhone app preference selection screen" /></a>
         </div>
@@ -278,12 +282,11 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- js -->
   <script src="./script.js"></script>
+  <!-- smooth scroll -->
   <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
-
-  <script
-  nomodule=""
-  src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
-></script>
+  <!-- icon -->
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
