responsive mobile menu added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </a>
           
           <!-- github -->
-          <a href="https://github.com/janehyun03" alt="hyun8503" ><img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/github.svg" alt="github" height="40" width="40"></img></a>
+          <a href="https://github.com/janehyun03" alt="hyun8503" ><img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/github.svg" alt="github" height="40" width="40"/></a>
           </div>
         </div>
       
