responsive mobile menu added

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="about-me-container">
                 <div class="about-me-pic"><img src="./images/traveler-b.JPG" class="me"></div>
                 <div class="about-me-discription">
-                  <p> "I am a world travel blogger. Traveling the world and exploring new places brings me immense joy. It’s not just about the journey itself. I take pleasure in sharing my firsthand travel experiences and the new information I gather through my blog. By doing so, I aim to help and inspire others who have a passion for travel and exploration. My goal is to provide useful insights and tips that can enhance their own travel experiences."</p>
+                  <p> "I am a travel blogger. Traveling the world and exploring new places brings me immense joy. It’s not just about the journey itself. I take pleasure in sharing my firsthand travel experiences and the new information I gather through my blog. By doing so, I aim to help and inspire others who have a passion for travel and exploration. My goal is to provide useful insights and tips that can enhance their own travel experiences."</p>
                  <div class="about-link">
                   <p>Explore my blog</p>
                   <a href="https://blog.naver.com/travelerjane" target="_blank">
