--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="about-me">
               <div class="about-me-container">
                 <div class="about-me-pic">
-                  <img src="./images/developer.png" class="me">
+                  <img src="./images/developer-b.jpg" class="me">
                 </div>
                 <div class="about-me-discription"> <p>"I'm a passionate web developer currently interning at Tesor Halo. With a keen interest in creating innovative and efficient web solutions, I strive to leverage my skills to build impactful and user-friendly applications."</p>
                 <div class="about-link">
