responsive mobile menu added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 <body>
   <header class="header">
-    <!-- <a href="#"> -->
+    <a class="logo" href="#">
       <img class="logo" alt="logo" src="/images/logo-b.png">
-    <!-- </a> -->
+    </a>
     <nav class="main-nav">
       <ul class="main-nav-list">
         <li><a class="main-nav-link" href="#">Home</a></li>
