--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <h3 class="heading-tertiary"> 
             OMNI FOOD</h3>
             <p class="step-description">
-              This is a lending page created for portfolio.
+              This is a landing page created for portfolio.
             </p>
         </div>
          <div class="step-img-box">
@@ -231,9 +231,9 @@
       <div class="step-text-box">
         <p class="step-number">02</p>
         <h3 class="heading-tertiary"> 
-          Netflix lending page</h3>
+          Netflix landing page</h3>
           <p class="step-description">
-            This is a lending page created for portfolio.
+            This is a landing page created for portfolio.
           </p>
       </div>
 
